v2.2.2+matrix.6
- Python 3
- Matrix compatibility 
- refactor all code
- support Nexus userrating in JSON RPC
- improve data for musicvideos see README
- improve data for music  see README

v2.2.2
- Fix when JSON query for movie details return no result

v2.2.1
- Fix when smart playlist name is not set
- Fix when property is not defined (ie no studio for a movie)

v2.2.0
- Fix for Gotham special:// paths

v2.1.9
- Add %s.d.Premiered for episodes

v2.1.8
- Use json instead of simplejson for python 2.7 and up.

v2.1.7
- Add properties for Music Videos playlist, see README.txt

v2.1.6
- Add %s.Loaded property to indicate the script is done loading the playlist
- Fix %s.Name property to get smart playlist name (crash when no name was set up or containing accented characters)

v2.1.5
- Add %s.%d.Watched property for episodes or TV shows

v2.1.4
- Add %s.%d.Runtime property for episodes or TV shows
- Add new method 'Playlist' which keeps the playlist order

v2.1.3
- Add %s.Name property for the playlist name

v2.1.2
- Fix script error on tvshow playlist
- Also set MPAA and studio for episodes in some cases

v2.1.1
- Fix runtime property to use duration from streamdetails
- Fix play property for albums
- Add art(thumb) for movies (same value as art(poster) but easiest for skinner to deal with albums and movies smart playlists)

v2.1.0
- Fix issue when album have no songs
- Fix resolution when movie or TV show is not anaylized yet (not height and weight in DB)

v2.0.9
- Fix quoted or not quoted path for smart playlist
- Add Theme, Mood, Style and Type properties for Music
- Remove Thumb and Fanart properties for Music (depricated and replaced by Art(thumb) and Art(fanart) properties)

v2.0.8
- Add MPAA and Studio properties for TV Shows

v2.0.7
- Add MPAA and Director properties for movies

v2.0.6
- Add OriginalTitle property for movies

v2.0.5
- Fix statistics for Albums smart playlists

v2.0.4
- Add Country property for Movies
- Add DBID property for Movies and Episodes