@@ -5,6 +5,7 @@ v2.2.2+matrix.6
 - support Nexus userrating in JSON RPC
 - improve data for musicvideos see README
 - improve data for music  see README
+- provide runtime in min:sec format for music videos as runtimesecs
 
 v2.2.2
 - Fix when JSON query for movie details return no result
